--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@vitejs/plugin-vue": "^6.0.3",
         "primeicons": "^7.0.0",
         "primevue": "^4.5.4",
-        "vue": "^3.5.26"
+        "vue": "^3.5.26",
+        "vue-router": "^4.6.4"
     }
 }
